CS103: Add the "last update" month/year

--- a/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
+++ b/Mathematical-Foundations-of-Computing-Stanford-CS103/Notes.tex
@@ -34,7 +34,7 @@
   Notes on \textit{Stanford: CS103: Mathematical Foundations of Computing}
 }
 \author{Yaobin Wen}
-\date{July 2023}
+\date{July 2023 $\sim$ December 2023}
 
 \begin{document}
 
