Real Analysis MIT 18100A: Add the titles of the remaining chapters

--- a/Real-Analysis-MIT-18100A/Notes.tex
+++ b/Real-Analysis-MIT-18100A/Notes.tex
@@ -1108,6 +1108,72 @@ statement $|A| < |\mathcal{P}(A)|$ by considering the following cases:
 
 TODO
 
+% =============================================================================
+%
+% Chapter 2: Sequences and Series
+%
+% =============================================================================
+
+\chapter{Sequences and Series}
+
+TODO
+
+% =============================================================================
+%
+% Chapter 3: Continuous Functions
+%
+% =============================================================================
+
+\chapter{Continuous Functions}
+
+TODO
+
+% =============================================================================
+%
+% Chapter 4: The Derivative
+%
+% =============================================================================
+
+\chapter{The Derivative}
+
+TODO
+
+% =============================================================================
+%
+% Chapter 5: The Riemann Integral
+%
+% =============================================================================
+
+\chapter{The Riemann Integral}
+
+TODO
+
+% =============================================================================
+%
+% Chapter 6: Sequences of Functions
+%
+% =============================================================================
+
+\chapter{Sequences of Functions}
+
+TODO
+
+% =============================================================================
+%
+% Chapter 7: Metric Spaces
+%
+% =============================================================================
+
+\chapter{Metric Spaces}
+
+TODO
+
+% =============================================================================
+%
+% References
+%
+% =============================================================================
+
 \chapter*{References}
 \addcontentsline{toc}{chapter}{References}
 
