--- a/Real-Analysis-MIT-18100A/Notes.tex
+++ b/Real-Analysis-MIT-18100A/Notes.tex
@@ -1162,6 +1162,76 @@ Supremum (or infimum) is \textbf{unique} (if it exists): If $b$ and $b_0$ are su
 A supremum or infimum for $E$ (even if they exist) \textbf{need not be in} $E$. For example, the set $E = {x \in
   \mathbb{Q}: x < 1}$ has the least upper bound of 1 but $1 \notin E$.
 
+\colorbox{lime}{NOTE(ywen)}: Although the supremum or infimum do not have to be in $E$, they \textbf{must be in} $S$ by
+the definition. For example, consider the set $\mathbb{Q}$ and its subset $E = \{ x \in \mathbb{Q}: x^2 < 2 \}$. In
+this case, $E$ does not have a supremum because we are considering $\mathbb{Q}$ instead of $\mathbb{R}$. If we consider
+$\mathbb{R}$, then $E$ does have a supremum of $\sqrt{2}$. However, in $\mathbb{Q}$, there are an infinite number of
+rational numbers that are greater than $\sqrt{2}$, so we can't find one rational number to be the supremum of $E$.
+
+% ******************************
+\subsection{Definition 1.1.3: The least-upper-bound property}
+% ******************************
+
+\textbf{Definition 1.1.3.} An \textbf{ordered} set $S$ has the \textbf{least-upper-bound property} if every nonempty
+subset $E \subset S$ that is bounded above has a least upper bound, that is $sup E$ exists in $S$.
+
+\textbf{Example 1.1.4:} The set $\mathbb{Q}$ of rational numbers does not have the least-upper-bound property. For
+example, the subset $\{ x \in \mathbb{Q}: x^2 < 2 \}$ does not have a supremum in $\mathbb{Q}$. (See [1] for the proof.)
+
+That $\mathbb{Q}$ does not have the least-upper-bound property is one of the most important reasons why we work with
+$\mathbb{R}$ in analysis.
+
+% ******************************
+\subsection{Definition 1.1.5: Field}
+% ******************************
+
+\textbf{Definition 1.1.5} A set $F$ is called a \textbf{field} if it has two operations defined on it, \textbf{addition}
+$x + y$ and \textbf{multiplication} $x \cdot y$ (or simply $xy$), and if it satisfies the following axioms:
+\begin{itemize}
+  \item (A1): $\forall x \in F, \forall y \in F. (x + y \in F)$
+  \item (A2): Commutativity: $\forall x \in F, \forall y \in F. (x + y = y + x)$.
+  \item (A3): Associativity: $\forall x \in F, \forall y \in F, \forall z \in F. ((x + y) + z = x + (y + z))$.
+  \item (A4): $\exists 0 \in F, \forall x \in F. (0 + x = x)$
+  \item (A5): $\forall x \in F, \exists y \in F. (x + y = 0)$. Use $-x$ to denote $y$.
+  \item (M1): $\forall x \in F, \forall y \in F. (xy \in F)$
+  \item (M2): Commutativity: $\forall x \in F, \forall y \in F. (xy = yx)$.
+  \item (M3): Associativity: $\forall x \in F, \forall y \in F, \forall z \in F. ((xy)z = x(yz))$.
+  \item (M4): $\exists 1 \in F. (1 \ne 0 \land (\forall x \in F. (1x = x)))$
+  \item (M5): $\forall x \in F. (x \ne 0 \rightarrow (\exists y \in F. (xy = 1)))$. Use $\frac{1}{x}$ to denote $y$.
+  \item (D): Distributive law: $\forall x \in F, \forall y \in F, \forall z \in F. x(y + z) = xy + xz$.
+\end{itemize}
+
+% ******************************
+\subsection{Definition 1.1.7: Ordered field}
+% ******************************
+
+\textbf{Definition 1.1.7} A field $F$ is said to be an \textbf{ordered field} if $F$ is also an \textbf{ordered set}
+such that:
+\begin{itemize}
+  \item (i) $\forall x, y, z \in F. (x < y \rightarrow x + z < y + z)$
+  \item (ii) $\forall x, y \in F. ((x > 0 \land y > 0) \rightarrow xy > 0)$
+\end{itemize}
+
+\textbf{Proposition 1.1.8.} Let $F$ be an \textbf{ordered field} and $x, y, z, w \in F$. Then:
+\begin{itemize}
+  \item (i) $x > 0 \rightarrow -x < 0$ (and vice versa).
+  \item (ii) $(x > 0 \land y < z) \rightarrow xy < xz$.
+  \item (iii) $(x < 0 \land y < z) \rightarrow xy > xz$.
+  \item (iv) $x \ne 0 \rightarrow x^2 > 0$.
+  \item (v) $0 < x < y \rightarrow 0 < \frac{1}{y} < \frac{1}{x}$.
+  \item (vi) $0 < x < y \rightarrow x^2 < y^2$.
+  \item (vii) $(x \le y \land z \le w) \rightarrow x + z \le y + w$.
+\end{itemize}
+
+\textbf{Proposition 1.1.9.} Let $x, y \in F$ where $F$ is an \textbf{ordered field}. Suppose $xy > 0$. Then either
+both $x$ and $y$ are positive, or both are negative.
+
+\colorbox{lime}{NOTE(ywen)}: Translated as first-order logic as follows:
+\[ \forall x, y \in F. ((IsOrderedField(F) \land xy > 0) \rightarrow ((x > 0 \land y > 0) \lor (x < 0 \land y < 0))) \]
+
+\textbf{Proposition 1.1.11.} Let $F$ be an \textbf{ordered field} with the least-upper-bound property. Let $A \subset F$
+be a nonempty set that is bounded below. Then $inf A$ exists.
+
 % =============================================================================
 %
 % Chapter 2: Sequences and Series
